# bigdata

./: .gitignore  README.md  main.py  pyproject.toml
docs/: projeto.docx
etl/: rotas.ipynb  rotas.xls
pandas/: 1-series.ipynb  11-dados.ipynb  2-dataframes.ipynb  3-dados-ausentes.ipynb  4-groupby.ipynb  5-mesclar-e-concatenar.ipynb  6-operacoes.ipynb  9-visualizacao-de-dados-incorporada-do-pandas.ipynb  secretarias_saoroque.csv
projeto/: Mobilidade_SP_PySpark.ipynb  main.py  sptrans_sample_static.xlsx
spark/: generate_livros.py  livros.txt  primeiro.ipynb
tce/: municipios.ipynb  unidades_gestoras.ipynb
