[project]
name = "bigdata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "html5lib>=1.1",
    "lxml>=6.0.2",
    "pandas>=2.3.1",
    "plotly>=6.3.1",
    "psycopg2>=2.9.10",
    "pyspark>=4.0.1",
    "requests>=2.32.5",
    "spark>=0.2.1",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.50.0",
    "watchdog>=6.0.0",
    "xlrd>=2.0.2",
]
